--- a/pages/index.html
+++ b/pages/index.html
@@ -32,12 +32,12 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/periods">
+                                    <a class="nav-link" href="/periods.html">
                                         Periods
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/about">
+                                    <a class="nav-link" href="/about.html">
                                         About
                                     </a>
                                 </li>
@@ -200,7 +200,7 @@
                     <ul class="pagination justify-content-center">
                         <li class="page-item">
                             <button class="btn btn-outline-primary">
-                                Load more
+                                Load more...
                             </button>
                         </li>
                     </ul>
