--- a/pages/period.html
+++ b/pages/period.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Conduit :: Periods</title>
+    <title>Conduit :: Period</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="resources/css/common.css" />
@@ -113,7 +113,58 @@
                 </div>
             </div>
             <div class="col-9">
-                <h2>Available periods</h2>
+                <h2>Period #3</h2>
+
+                <div class="text-secondary">
+                    <span class="fas fa-calendar mx-1" aria-hidden="true"></span>
+                    <small class="mr-3">
+                        28.07.2019 - 14.09.2020
+                    </small>
+
+                    <span class="fas fa-book mx-1" aria-hidden="true"></span>
+                    <small class="mr-3">
+                        registration
+                    </small>
+
+                    <span class="fas fa-user mx-1" aria-hidden="true"></span>
+                    <small class="mr-3">
+                        Shemplo
+                    </small>
+                </div>
+
+                <p class="mt-2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat bibendum
+                    nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio convallis
+                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor. Nam sagittis nisl
+                    vitae arcu luctus, eget maximus lorem vulputate.
+                </p>
+
+                <div class="container border rounded mt-4 mb-2 py-3">
+                    <div class="d-flex justify-content-between">
+                        <h5>
+                            Registration for this period is available
+                        </h5>
+
+                        <button class="btn btn-sm btn-primary">
+                            Register right now
+                        </button>
+                    </div>
+                    <div>
+                        You did not register for this period yet.
+                    </div>
+                    <div class="d-flex">
+                        <span>You have already registered for roles: </span>
+                        <div class="ml-2">
+                            <mark>Teacher</mark>,
+                            <mark>Org. committee</mark>
+                        </div>.
+                    </div>
+                </div>
+
+                <h4 class="mt-4">
+                    Available groups
+                </h4>
+
                 <div class="text-left p-2">
                     <div class="spinner-border spinner-border-sm mr-2"></div>
                     <span>Loading...</span>
@@ -127,10 +178,10 @@
                         <ul class="list-group">
                             <li class="list-group-item list-group-item-action">
                                 <div class="d-flex justify-content-between">
-                                    <h5>Period #3</h5>
+                                    <h5>Group #3</h5>
                                     <div>
-                                        <button class="btn btn-sm btn-link">
-                                            registration
+                                        <button class="btn btn-sm btn-outline-primary">
+                                            Join group
                                         </button>
                                         <button class="btn btn-sm btn-link">
                                             <span class="fas fa-info"></span>
@@ -140,17 +191,27 @@
                                 <div class="text-secondary">
                                     <span class="fas fa-calendar" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        28.07.2019 - 14.09.2020
+                                        31.07.2019
                                     </small>
 
-                                    <span class="fas fa-book" aria-hidden="true"></span>
+                                    <span class="fas fa-paw" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        registration
+                                        study
                                     </small>
 
                                     <span class="fas fa-user" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         Shemplo
+                                    </small>
+
+                                    <span class="fas fa-users" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        <span>23</span> members
+                                    </small>
+
+                                    <span class="fas fa-unlock-alt" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        join by application
                                     </small>
                                 </div>
                                 <p>
@@ -158,12 +219,14 @@
                                     bibendum
                                     nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio
                                     convallis
-                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor.
+                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor. Nam
+                                    sagittis nisl
+                                    vitae arcu luctus, eget maximus lorem vulputate.
                                 </p>
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 <div class="d-flex justify-content-between">
-                                    <h5>Period #2</h5>
+                                    <h5>Group #2</h5>
                                     <div>
                                         <button class="btn btn-sm btn-link">
                                             <span class="fas fa-info"></span>
@@ -173,17 +236,27 @@
                                 <div class="text-secondary">
                                     <span class="fas fa-calendar" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        08.03.2018 - 18.03.2020
+                                        30.07.2019
                                     </small>
 
-                                    <span class="fas fa-book" aria-hidden="true"></span>
+                                    <span class="fas fa-paw" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        in process
+                                        study
                                     </small>
 
                                     <span class="fas fa-user" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         Shemplo
+                                    </small>
+
+                                    <span class="fas fa-users" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        <span>21</span> members
+                                    </small>
+
+                                    <span class="fas fa-unlock-alt" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        join by invitation
                                     </small>
                                 </div>
                                 <p>
@@ -191,12 +264,14 @@
                                     bibendum
                                     nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio
                                     convallis
-                                    augue, ac malesuada velit dolor eget lorem.
+                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor. Nam
+                                    sagittis nisl
+                                    vitae arcu luctus, eget maximus lorem vulputate.
                                 </p>
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 <div class="d-flex justify-content-between">
-                                    <h5>Period #1</h5>
+                                    <h5>Group #1</h5>
                                     <div>
                                         <button class="btn btn-sm btn-link">
                                             <span class="fas fa-info"></span>
@@ -206,17 +281,27 @@
                                 <div class="text-secondary">
                                     <span class="fas fa-calendar" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        22.04.2017 - 03.11.2019
+                                        29.07.2019
                                     </small>
 
-                                    <span class="fas fa-book" aria-hidden="true"></span>
+                                    <span class="fas fa-paw" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        in process
+                                        elimination
                                     </small>
 
                                     <span class="fas fa-user" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         Shemplo
+                                    </small>
+
+                                    <span class="fas fa-users" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        <span>316</span> members
+                                    </small>
+
+                                    <span class="fas fa-unlock-alt" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        free to join
                                     </small>
                                 </div>
                                 <p>
@@ -224,12 +309,13 @@
                                     bibendum
                                     nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio
                                     convallis
-                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor.
+                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor. Nam
+                                    sagittis nisl
+                                    vitae arcu luctus, eget maximus lorem vulputate.
                                 </p>
                             </li>
                         </ul>
                     </div>
-
                     <div class="col-3">
                         <h4 class="mb-3">Search filters</h4>
 
