--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Conduit :: Home page</title>
+        <title>Conduit :: News page</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="resources/css/common.css"/>
