Periods page (+ component) started + added some drafts of other pages

--- a/pages/html/group.html
+++ b/pages/html/group.html
@@ -279,6 +279,11 @@
                                     <small class="mr-3">
                                         Shemplo
                                     </small>
+                                    
+                                    <span class="fas fa-book" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        Online
+                                    </small>
                                 </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
