--- a/pages/html/period.html
+++ b/pages/html/period.html
@@ -29,16 +29,19 @@
                         <ul class="nav flex-column">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">
+                                    <i class="fas fa-newspaper mr-2" aria-hidden="true"></i>
                                     News page
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/periods.html">
+                                    <i class="fas fa-list mr-2" aria-hidden="true"></i>
                                     Periods
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/about.hhtml">
+                                <a class="nav-link" href="/about.html">
+                                    <i class="fas fa-at mr-2" aria-hidden="true"></i>
                                     About
                                 </a>
                             </li>
@@ -48,10 +51,6 @@
                 <div class="row px-1 py-2">
                     <div class="col">
                         <h4>Profile</h4>
-                        <div class="text-left px-3 py-1">
-                            <div class="spinner-border spinner-border-sm mr-2"></div>
-                            <span>Loading...</span>
-                        </div>
                         <p class="pl-3 py-1">Login or register on site to continue work</p>
                         <form class="pl-3">
                             <div class="input-group input-group-sm mb-3">
@@ -116,19 +115,24 @@
                 <h2>Period #3</h2>
 
                 <div class="text-secondary">
-                    <span class="fas fa-calendar mx-1" aria-hidden="true"></span>
+                    <span class="fas fa-calendar-day" aria-hidden="true"></span>
+                    <small class="mr-3">
+                        23.03.2019 19:28
+                    </small>
+
+                    <span class="fas fa-user" aria-hidden="true"></span>
+                    <small class="mr-3">
+                        Shemplo
+                    </small>
+
+                    <span class="fas fa-calendar-week" aria-hidden="true"></span>
                     <small class="mr-3">
                         28.07.2019 - 14.09.2020
                     </small>
 
-                    <span class="fas fa-book mx-1" aria-hidden="true"></span>
+                    <span class="fas fa-book" aria-hidden="true"></span>
                     <small class="mr-3">
-                        registration
-                    </small>
-
-                    <span class="fas fa-user mx-1" aria-hidden="true"></span>
-                    <small class="mr-3">
-                        Shemplo
+                        Registration
                     </small>
                 </div>
 
@@ -161,13 +165,10 @@
                     </div>
                 </div>
 
-                <h4 class="mt-4">
-                    Available groups
-                </h4>
+                <div class="container d-flex justify-content-start align-items-center mt-4">
+                    <h4>Available groups</h4>
 
-                <div class="text-left p-2">
-                    <div class="spinner-border spinner-border-sm mr-2"></div>
-                    <span>Loading...</span>
+                    <div class="spinner-grow text-primary ml-2"></div>
                 </div>
 
                 <div class="row mb-5">
@@ -188,8 +189,8 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="text-secondary">
-                                    <span class="fas fa-calendar" aria-hidden="true"></span>
+                                <div class="text-secondary mb-1">
+                                    <span class="fas fa-calendar-day" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         31.07.2019
                                     </small>
@@ -216,13 +217,7 @@
                                 </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
-                                    bibendum
-                                    nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio
-                                    convallis
-                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor. Nam
-                                    sagittis nisl
-                                    vitae arcu luctus, eget maximus lorem vulputate.
-                                </p>
+                                    bibendum nunc dapibus sagittis.</p>
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 <div class="d-flex justify-content-between">
@@ -233,8 +228,8 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="text-secondary">
-                                    <span class="fas fa-calendar" aria-hidden="true"></span>
+                                <div class="text-secondary mb-1">
+                                    <span class="fas fa-calendar-day" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         30.07.2019
                                     </small>
@@ -261,13 +256,7 @@
                                 </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
-                                    bibendum
-                                    nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio
-                                    convallis
-                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor. Nam
-                                    sagittis nisl
-                                    vitae arcu luctus, eget maximus lorem vulputate.
-                                </p>
+                                    bibendum nunc dapibus sagittis.</p>
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 <div class="d-flex justify-content-between">
@@ -278,8 +267,8 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="text-secondary">
-                                    <span class="fas fa-calendar" aria-hidden="true"></span>
+                                <div class="text-secondary mb-1">
+                                    <span class="fas fa-calendar-day" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         29.07.2019
                                     </small>
@@ -306,16 +295,34 @@
                                 </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
-                                    bibendum
-                                    nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio
-                                    convallis
-                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor. Nam
-                                    sagittis nisl
-                                    vitae arcu luctus, eget maximus lorem vulputate.
-                                </p>
+                                    bibendum nunc dapibus sagittis.</p>
                             </li>
                         </ul>
                     </div>
+
+                    <div class="col">
+                        <div class="d-flex mb-2">
+                            <button class="btn btn-sm btn-outline-secondary">
+                                <i class="fas fa-sync mr-2" aria-hidden="true"></i>
+                                Reload groups list
+                            </button>
+                        </div>
+
+                        <div class="d-flex mb-4">
+                            <button class="btn btn-sm btn-outline-secondary">
+                                <i class="fas fa-archive mr-2" aria-hidden="true"></i>
+                                Open archive
+                            </button>
+                        </div>
+
+                        <div class="d-flex mb-2">
+                            <button class="btn btn-sm btn-outline-success">
+                                <i class="fas fa-plus mr-2" aria-hidden="true"></i>
+                                Create new group
+                            </button>
+                        </div>
+                    </div>
+                    <!--
                     <div class="col-3">
                         <h4 class="mb-3">Search filters</h4>
 
@@ -384,6 +391,7 @@
                             </button>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
