--- a/pages/html/periods.html
+++ b/pages/html/periods.html
@@ -29,16 +29,19 @@
                         <ul class="nav flex-column">
                             <li class="nav-item">
                                 <a class="nav-link" href="/">
+                                    <i class="fas fa-newspaper mr-2" aria-hidden="true"></i>
                                     News page
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="/periods.html">
+                                    <i class="fas fa-list mr-2" aria-hidden="true"></i>
                                     Periods
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/about.hhtml">
+                                <a class="nav-link" href="/about.html">
+                                    <i class="fas fa-at mr-2" aria-hidden="true"></i>
                                     About
                                 </a>
                             </li>
@@ -48,10 +51,6 @@
                 <div class="row px-1 py-2">
                     <div class="col">
                         <h4>Profile</h4>
-                        <div class="text-left px-3 py-1">
-                            <div class="spinner-border spinner-border-sm mr-2"></div>
-                            <span>Loading...</span>
-                        </div>
                         <p class="pl-3 py-1">Login or register on site to continue work</p>
                         <form class="pl-3">
                             <div class="input-group input-group-sm mb-3">
@@ -113,10 +112,10 @@
                 </div>
             </div>
             <div class="col-9">
-                <h2>Available periods</h2>
-                <div class="text-left p-2">
-                    <div class="spinner-border spinner-border-sm mr-2"></div>
-                    <span>Loading...</span>
+                <div class="d-flex justify-content-start align-items-center">
+                    <h2>Available periods</h2>
+
+                    <div class="spinner-grow text-primary ml-2"></div>
                 </div>
 
                 <div class="row mb-5">
@@ -130,35 +129,37 @@
                                     <h5>Period #3</h5>
                                     <div>
                                         <button class="btn btn-sm btn-link">
-                                            registration
+                                            Registration
                                         </button>
                                         <button class="btn btn-sm btn-link">
                                             <span class="fas fa-info"></span>
                                         </button>
                                     </div>
                                 </div>
-                                <div class="text-secondary">
-                                    <span class="fas fa-calendar" aria-hidden="true"></span>
+                                <div class="text-secondary mb-1">
+                                    <span class="fas fa-calendar-day" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        28.07.2019 - 14.09.2020
-                                    </small>
-
-                                    <span class="fas fa-book" aria-hidden="true"></span>
-                                    <small class="mr-3">
-                                        registration
+                                        23.03.2019 19:28
                                     </small>
 
                                     <span class="fas fa-user" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         Shemplo
                                     </small>
+
+                                    <span class="fas fa-calendar-week" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        28.07.2019 - 14.09.2020
+                                    </small>
+
+                                    <span class="fas fa-book" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        Registration
+                                    </small>
                                 </div>
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
-                                    bibendum
-                                    nunc dapibus sagittis. Etiam tincidunt, turpis at pharetra aliquet, metus odio
-                                    convallis
-                                    augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor.
+                                    bibendum nunc dapibus sagittis.
                                 </p>
                             </li>
                             <li class="list-group-item list-group-item-action">
@@ -170,22 +171,33 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="text-secondary">
-                                    <span class="fas fa-calendar" aria-hidden="true"></span>
+                                <div class="text-secondary mb-1">
+                                    <span class="fas fa-calendar-day" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        08.03.2018 - 18.03.2020
-                                    </small>
-
-                                    <span class="fas fa-book" aria-hidden="true"></span>
-                                    <small class="mr-3">
-                                        in process
+                                        23.03.2019 23:43
                                     </small>
 
                                     <span class="fas fa-user" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         Shemplo
                                     </small>
+
+                                    <span class="fas fa-calendar-week" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        08.03.2018 - 18.03.2020
+                                    </small>
+
+                                    <span class="fas fa-book" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        In process
+                                    </small>
+
                                 </div>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
+                                    bibendum nunc dapibus sagittis.
+                                </p>
+                                <!--
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
                                     bibendum
@@ -193,6 +205,7 @@
                                     convallis
                                     augue, ac malesuada velit dolor eget lorem.
                                 </p>
+                                -->
                             </li>
                             <li class="list-group-item list-group-item-action">
                                 <div class="d-flex justify-content-between">
@@ -203,22 +216,33 @@
                                         </button>
                                     </div>
                                 </div>
-                                <div class="text-secondary">
-                                    <span class="fas fa-calendar" aria-hidden="true"></span>
+                                <div class="text-secondary mb-1">
+                                    <span class="fas fa-calendar-day" aria-hidden="true"></span>
                                     <small class="mr-3">
-                                        22.04.2017 - 03.11.2019
-                                    </small>
-
-                                    <span class="fas fa-book" aria-hidden="true"></span>
-                                    <small class="mr-3">
-                                        in process
+                                        23.03.2019 12:45
                                     </small>
 
                                     <span class="fas fa-user" aria-hidden="true"></span>
                                     <small class="mr-3">
                                         Shemplo
                                     </small>
+
+                                    <span class="fas fa-calendar-week" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        22.04.2017 - 03.11.2019
+                                    </small>
+
+                                    <span class="fas fa-book" aria-hidden="true"></span>
+                                    <small class="mr-3">
+                                        In process
+                                    </small>
+
                                 </div>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
+                                    bibendum nunc dapibus sagittis.
+                                </p>
+                                <!--
                                 <p>
                                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus tincidunt erat
                                     bibendum
@@ -226,10 +250,34 @@
                                     convallis
                                     augue, ac malesuada velit dolor eget lorem. Ut feugiat dignissim tortor.
                                 </p>
+                                -->
                             </li>
                         </ul>
                     </div>
 
+                    <div class="col">
+                        <div class="d-flex mb-2">
+                            <button class="btn btn-sm btn-outline-secondary">
+                                <i class="fas fa-sync mr-2" aria-hidden="true"></i>
+                                Reload periods list
+                            </button>
+                        </div>
+
+                        <div class="d-flex mb-4">
+                            <button class="btn btn-sm btn-outline-secondary">
+                                <i class="fas fa-archive mr-2" aria-hidden="true"></i>
+                                Open archive
+                            </button>
+                        </div>
+
+                        <div class="d-flex mb-2">
+                            <button class="btn btn-sm btn-outline-success">
+                                <i class="fas fa-plus mr-2" aria-hidden="true"></i>
+                                Create new period
+                            </button>
+                        </div>
+                    </div>
+                    <!--
                     <div class="col-3">
                         <h4 class="mb-3">Search filters</h4>
 
@@ -298,6 +346,7 @@
                             </button>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
